feat!: move projects crupdate resource to /users/*/projects for more control
