# doc/api.yml
@@ -244,11 +244,17 @@ paths:
           $ref: "#/components/responses/400"
         500:
           $ref: "#/components/responses/500"
+  /users/{userId}/projects:
     put:
       tags:
         - Projects
       summary: Create or update projects
       operationId: crupdateProjects
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
